[package]
name = "solana-meme-sniper"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
dotenv = "0.15"
futures = "0.3"
pyth-sdk-solana = "0.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-account-decoder = "1.17.0"
solana-client = "1.17.0"
solana-program = "1.17.0"
solana-sdk = "1.17.0"
solana-transaction-status = "1.17.0"
spl-token = "4.0.0"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anchor-client = "0.29.0"
url = "2.4"

[build-dependencies]

anchor-idl = "0.4"
serde_json = "1.0"
